index, weater 수정

--- a/index.html
+++ b/index.html
@@ -34,8 +34,16 @@
        <span></span>
    </div>
    <div class="weather">
-       <span></span>
-       <span></span>
+       <p>
+           <span><i class="fa-solid fa-cloud-sun"></i></span>
+           <span class="weather-inner"></span>
+           <span><i class="fa-solid fa-temperature-high"></i></span>
+           <span class="temperature-inner"></span>
+       </p>
+       <p>
+           <span><i class="fa-solid fa-location-dot"></i></span>
+           <span class="place"></span>
+       </p>
    </div>
    <div class="sns-icon">
     <span><a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a></span>
